--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
     --cinza-titulos: #101828;
     --cor-de-fundo: #ffffff;
     --cor-borda: #EAECF0;
+    --cor-copy: #98A2B3;
+    --cor-placeholder: #D0D5DD; 
 
     --fonte-principal: 'Inter', sans-serif;
 }
@@ -125,14 +127,14 @@ body {
     color: var(--cor-destaque);
     font-size: 0.875rem;
     font-weight: 500;
-    
+    margin-bottom: 1rem;
 }
 
 .secao__subtitulo {
     color: var(--cinza-titulos);
     font-size: 2.25rem;
     font-weight: 600;
-    margin: 1.25rem auto;
+    margin-bottom: 1.25rem;
 }
 
 .titulo-vagas {
@@ -222,4 +224,45 @@ body {
 .depoimentos__perfil__cargo {
     color: var(--cinza-principal);
     font-size: 0.875rem;
+}
+
+.rodape {
+    padding: 6rem 0;
+    text-align: center;
+}
+
+.formulario-container {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    justify-content: center;
+    margin: 2.5rem auto 2rem auto;
+    width: 80%;
+}
+
+.formulario__email {
+    border: 1px solid var(--cor-placeholder);
+    border-radius: 0.5rem;
+    padding: 0.75rem 0.85rem 0.75rem 1rem;
+    width: 50%;
+}
+
+.formulario__email::placeholder {
+    color: var(--cinza-principal);
+    font-family: var(--fonte-principal);
+    font-weight: 400;
+}
+
+.formulario__botao {
+    background-color: var(--cor-destaque);
+    border: none;
+    border-radius: 0.5rem;
+    color: var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font-weight: 500;
+    padding: 0.75rem 1.25rem;
+}
+
+.texto-copy {
+    color: var(--cor-copy);
 }
